# Informatik2

./: CMakeLists.txt  Test.c
Exercises/: CMakeLists.txt  mock1.c  mock2.c  mock3.c
Exercises/00/: ex00_1.c  ex0_2.c
Exercises/01/: ex01.c  ex01_1.c  ex01_2.c  ex01_3.c
Exercises/02/: ex02_1.c  ex02_2.c  task2_sol.c
Exercises/03/: ex03_1.c
Exercises/04/: modifiedMergeSort.c
Exercises/05/: heapsort.c  quicksort.c
Exercises/06/: ex06_1.c  ex06_2.c  ex06_3.c
Exercises/07/: ex07_2.c  ex07_3.c  ex07_4.c  task2_sol.c  task3_sol.c  task4_sol.c
Exercises/08/: balancedBST.c  binarySearchTree.c  trimmedBST.c
Exercises/09/: ex09_4.c
Exercises/10/: hashtable.c
Lecture/: BinarySearch.c  BubbleSort.c  CMakeLists.txt  HeapSort.c  HilbertCurve.c  InsertionSort.c  MergeSort.c  QuickSort.c  SelectionSort.c  countOccurrences.c
Practice/: mergeSort.c
Practice/06_strings/: strings.c
Practice/09_func/: bigprint.c
Practice/10_static/: static.c
exam/: 1.c  2.c  3.c  4.c
practice/: CMakeLists.txt  Test.c
practice/01_helloworld/: test.c
practice/04_arrays/: average.c
practice/09_func/: bigprint.c
practice/5_conditions/: conditions.c
practice/6_strings/: strings.c
practice/7_for/: factorial.c
practice/8_while/: while.c
practice/grades/: grades.c
practice/helloworld/: CMakeLists.txt
practice/variables/: variables.c
