cmake_minimum_required(VERSION 3.21)
project(Informatik2 C)

set(CMAKE_C_STANDARD 11)

add_executable(ex00_1
        00/ex00_1.c)

add_executable(ex00_2
        00/ex00_2.c)

add_executable(ex01_1
        01/ex01_1.c)

add_executable(ex01_2
        01/ex01_2.c)

add_executable(ex01_3
        01/ex01_3.c)

add_executable(ex02_1
        02/ex02_1.c)

add_executable(ex02_2
        02/ex02_2.c)

add_executable(ex02_1solution
        02/task2_sol.c)

add_executable(ex02_2solution
        02/task3_sol.c)