cmake_minimum_required(VERSION 3.21)
project(Informatik2 C)

set(CMAKE_C_STANDARD 11)

add_executable(ex00_1
        00/ex00_1.c)

add_executable(ex00_2
        00/ex00_2.c)

add_executable(ex01_1
        01/ex01_1.c)

add_executable(ex01_2
        01/ex01_2.c)

add_executable(ex01_3
        01/ex01_3.c)

add_executable(ex02_1
        02/ex02_1.c)

add_executable(ex02_2
        02/ex02_2.c)

add_executable(ex02_1solution
        02/task2_sol.c)

add_executable(ex02_2solution
        02/task3_sol.c)

add_executable(ex03_1
        03/ex03_1.c)

add_executable(ex03_1solution
        03/task_1_sol.c)

add_executable(ex04_7
        04/modifiedMergeSort.c)

add_executable(ex04_6demo
        04/task6_demo.c)

add_executable(ex04_7solution
        04/task7_sol.c)